# flake8-executable

./: .appveyor.yml  .bandit  .coveragerc.in  .editorconfig  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.py  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: ci.yml  renovate-lint.yml
flake8_executable/: __init__.py  _version.py  version.py
requirements/: lint.txt  test.txt
tests/: exe002_neg.py  test_flake8_executable.py
tests/to-be-tested/: exe001_neg.py  exe001_pos.py  exe002_pos.py  exe003_neg.py  exe003_pos.py  exe004_neg.py  exe004_pos.py  exe005_neg.py  exe005_pos.py  exe006_2_neg.py  exe006_2_pos.py  exe006_neg.py  exe006_pos.py  exe007_neg.py  exe007_pos.py  main_off.py
