[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[project]
name = "flake8-executable"
description="A Flake8 plugin for checking executable permissions and shebangs."
readme="README.md"
keywords=["flake8", "linter","qa", "shebang"]
authors = [
    {name = "Hong Xu", email = "hong@topbug.net"},
    {name = "Simon Brugman", email = "sfbbrugman@gmail.com"},
]
license={text = 'LGPL v3+'}
requires-python=">=3.7"
classifiers=[
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "flake8",
]
dynamic = ["version"]

[project.urls]
url="https://github.com/xuhdev/flake8-executable"

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
dev = [
    "flake8-executable[test]",
    "flake8-executable[lint]",
]
lint = [
    "pre-commit",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.entry-points]
"flake8.extension" = {EXE00 = "flake8_executable:ExecutableChecker"}

[tool.setuptools.dynamic]
version = {attr = "flake8_executable.__version__"}

[tool.bandit]
exclude_dirs = ["/.eggs","/tests"]
